# alexandria

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
alexandria/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  tests.py  views.py
