[tool.poetry]
name = "alexandria"
version = "0.1.0"
description = "The Library of Alexandria -- My own personal blog"
authors = ["cAtaman <chimaataman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
